2002-08-14  Dick Porter  <dick@ximian.com>

	* ResourceSet.cs: Throw the correct exceptions

	* ResourceManager.cs: Implemented all unfinished methods

2002-03-12  Duncan Mak  <duncan@ximian.com>

	* MissingManifestResourceException.cs: This should inherit from
	SystemException, not Exception.

2002-01-26  Nick Drochak  <ndrochak@gol.com>

	* ResourceReader.cs: Finsished reading resource files with just strings
	in them.  Need to figure out other types, and also resources with
	multiple types in the same file.

2002-01-24  Nick Drochak  <ndrochak@gol.com>

	* ResourceReader.cs: Implemented constructors. Started on the 
	GetEnumerator() method.  Not done yet, but comitting for 
	'disaster recovery' purposes.

2002-01-19  Duncan Mak  <duncan@ximian.com>

	* *.cs: Fixed indentation. There was a stupid bug in my .emacs file.

2002-1-17  Duncan Mak  <duncan@duncan@ximian.com>

	* ResourceSet.cs: Implemented GetObject (string, bool) and GetString
	(string, bool). ResourceSet has no more MonoTODOs! Also added in the
	Serializable attribute.
	
	* *.cs: convert to Miguel's brace style.

2002-01-17  Duncan Mak  <duncan@ximian.com>

	* ResourceManager.cs: Fixed GetNeutralResourcesLanguage () and added
	new attributes documented in 1.0 SDK.

2002-01-17  Duncan Mak  <duncan@ximian.com>

	* ResourceWriter.cs: Added MonoTODO decorations.

	* SatelliteContractVersionAttribute.cs: added new attributes in 1.0 SDK.

	* NeutralResoucesLanguageAttribute.cs: added new attributes in 1.0 SDK
	
2002-01-16  Duncan Mak  <duncan@ximian.com>

	* ResourceReader.cs: Fixed some typos.

	* ResourceManager.cs: After reading the tutorial from the SDK,
	finished all the ResourceManager constructors and removed those
	MonoTODO tags.
	
	Removed MonoTODO from GetNeutralResourcesLanguage (Assembly)
	because Miguel just implemented the whole class, including the
	constructor that I needed (CultureInfo (string)).

	Updated fields after reading the new docs from the final SDK.
