@@ -1,3 +1,8 @@
+2002-08-18  Dick Porter  <dick@ximian.com>
+
+	* ResourceReader.cs: Finished basic implementation.  Some
+	optimisation in conjunction with ResourceSet still possible though
+
 2002-08-14  Dick Porter  <dick@ximian.com>
 
 	* ResourceSet.cs: Throw the correct exceptions
